eighth step to new crm

--- a/web-app/src/main/resources/templates/finance.html
+++ b/web-app/src/main/resources/templates/finance.html
@@ -95,7 +95,7 @@
             <label for="transaction-type-filter">Тип:</label>
             <select id="transaction-type-filter">
                 <option value="">Всі типи</option>
-                <option value="INTERNAL_TRANSFER">Перевод між рахунками</option>
+                <option value="INTERNAL_TRANSFER">Переказ між рахунками</option>
                 <option value="EXTERNAL_INCOME">Зовнішній прихід</option>
                 <option value="EXTERNAL_EXPENSE">Зовнішній витрата</option>
                 <option value="CLIENT_PAYMENT">Оплата клієнту</option>
@@ -173,7 +173,7 @@
                 <label for="transaction-type">Тип транзакції:</label>
                 <select id="transaction-type" required>
                     <option value="">Виберіть тип</option>
-                    <option value="INTERNAL_TRANSFER">Перевод між рахунками</option>
+                    <option value="INTERNAL_TRANSFER">Переказ між рахунками</option>
                     <option value="EXTERNAL_INCOME">Зовнішній прихід</option>
                     <option value="EXTERNAL_EXPENSE">Зовнішній витрата</option>
                     <option value="CLIENT_PAYMENT">Оплата клієнту</option>
