--- a/web-app/src/main/resources/static/css/purchase.css
+++ b/web-app/src/main/resources/static/css/purchase.css
@@ -591,6 +591,26 @@ input.custom-select-placeholder {
     font-size: 0.8em;
     font-family: Roboto, sans-serif;
     text-align: center;
+    position: relative;
+}
+
+#purchase-list th .column-resizer {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 5px;
+    height: 100%;
+    cursor: col-resize;
+    background: transparent;
+    z-index: 10;
+}
+
+#purchase-list th .column-resizer:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+#purchase-list th .column-resizer:active {
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 #purchase-list td {
